manifests/01_RollingUpdate/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rollingupdate-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: rolling.dev.sample.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rollingupdate-demo
            port:
              number: 30080
